<package>
  <name>catkin_optional</name>
  <description>
    Helps organize CMake files that optionally use catkin.
  </description>
  <version>0.0.0</version>
  <maintainer email="kirk.mactavish@mail.utoronto.ca">Kirk MacTavish</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
